fix(components): Scrollbar added to the input field. Tabs layout changes.

--- a/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
+++ b/centreon-frontend/centreon-ui/src/ScrollBar/scroll-bar.scss
@@ -26,5 +26,11 @@
       left: auto !important;
       right: 0 !important;
     }
+    &-custom {
+      box-sizing: border-box;
+      padding-top: 10px;
+      bottom: 10px;
+      padding-left: 1px;
+    }
   }
 }
